# pile

./: .gitignore  db_ddl.sql  manage.py  offgrid_pile.sh  pyproject.toml  run.sh  static_mirror.sh
db_versions/: 1_add_uploaded.sql  apply_all.sh
docker/: Dockerfile  docker-compose.yml
sdbs_pile/: asgi.py  settings.py  urls.py  wsgi.py
sdbs_pile/pile/: admin.py  apps.py  models.py  urls.py  views.py
sdbs_pile/pile/migrations/: 0001_initial.py  0002_auto_20200317_2357.py  0003_auto_20200318_2201.py  0004_document_hidden.py  0005_auto_20200320_1329.py  0006_auto_20200329_1132.py  0007_document_status.py  0008_localize_files_20200401_1221.py  0009_auto_20200402_1904.py  0010_document_media_type.py  0011_document_related.py  0012_auto_20200610_1013.py  0013_auto_20200727_1533.py  0014_document_image.py
sdbs_pile/pile/static/: main.css
sdbs_pile/pile/templates/: front_base.html  front_doc_detail.html  front_doc_listing.html  front_intro.html  label.html
www/: admin.php  composer.json  feed.php  index.php  label.php
www/_templates/: Template.php  admin_doc_edit.php  admin_doc_listing.php  admin_doc_remove.php  admin_intro.php  admin_tag_edit.php  admin_wrap.php  front_doc_listing.php  front_doc_overview.php  front_intro.php  front_wrap.php  full_text.php  intro.php  label_template.php
www/_util/: PileDB.php  Uploader.php
www/assets/: admin.css  main.css
