[tool.poetry]
name = "pile"
version = "0.1.0"
description = ""
authors = ["Tomáš Mládek <t@mldk.cz>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.4"
django-model-utils = "^4.0.0"
weasyprint = "^51"
pypdf2 = "^1.26.0"
markdown2 = "^2.3.8"
bleach = "^3.1.4"
django-ordered-model = "^3.4.1"

[tool.poetry.dev-dependencies]
ipython = "^7.13.0"
gunicorn = "^20.0.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
